fixed site layout issue

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
 #main {
+  @include clearfix;
   margin-left: auto;
   margin-top: 2em;
   margin-right: auto;
